@@ -1264,7 +1264,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkHBox" id="hbox2">
+				<widget class="GtkHBox" id="hbox_pattern">
 				  <property name="visible">True</property>
 				  <property name="homogeneous">False</property>
 				  <property name="spacing">12</property>
