@@ -7,6 +7,8 @@
  - added "search lack", so that the interactive search does not start 
    immediately
  - new quit dialog
+ - speedup for the pattern filters
+ - small ui-enhancements in the filter dialog
 
 0.44
  - two alternative main layouts can be choosen now
